--- a/app/views/records/index.html.slim
+++ b/app/views/records/index.html.slim
@@ -1,23 +1,15 @@
-p#notice
-  = notice
-h1
-  | Listing Records
-table.table
-  thead
-    tr
-      th
-        | Date
-      th[colspan="3"]
-  tbody
-    - @records.each do |record|
-      tr
-        td
-          = record.date
-        td
-          = link_to 'Show', record
-        td
-          = link_to 'Edit', edit_record_path(record)
-        td
-          = link_to 'Destroy', record, method: :delete, data: { confirm: 'Are you sure?' }
-br
-= link_to 'New Record', new_record_path, class:'btn btn-primary'
+h2
+  | Atas
+
+hr.divider
+
+.row
+
+  = form_tag('/select_sector_records', remote: true) do
+    
+    .col-sm-9.col-xs-6
+      = collection_select :sector, :id, Sector.all, :id, :name, {}, class:'form-control'
+    .col-sm-3.col-xs-6
+      = submit_tag 'Buscar Atas', class:'btn btn-primary btn-block'
+
+#sector_records style="padding-top: 20px"
