Atualiza o número da reunião do núcleo

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,5 +1,7 @@
 doctype html
+
 html
+
   head
     title
       | SGA
@@ -7,5 +9,7 @@ html
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
     meta name="viewport" content="width=device-width, initial-scale=1"
+
   body.container
     = yield
+    = console
