--- a/app/views/records/_form_basic_info.html.slim
+++ b/app/views/records/_form_basic_info.html.slim
@@ -2,7 +2,7 @@
 
   .panel-body
 
-    = form_for @record do |f|
+    = form_for @record, remote: true do |f|
 
       .form-group
         = f.label 'Data e Horário'
@@ -12,6 +12,7 @@
             span.glyphicon.glyphicon-calendar
 
       = f.hidden_field :sector_id, value: @record.sector_id
+      = f.hidden_field :number, value: 0
       
       = f.submit 'Criar', class:'btn btn-success'
 
