--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -6,10 +6,10 @@ html
     title
       | SGA
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
+    link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css"
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
     meta name="viewport" content="width=device-width, initial-scale=1"
 
   body.container
     = yield
-    = console
