Edita número e data da reunião, atualiza ícones

--- a/app/views/records/_discussions.html.slim
+++ b/app/views/records/_discussions.html.slim
@@ -3,7 +3,8 @@
   .col-sm-12
     - if @record.discussions.blank?
       .alert.alert-danger
-        | Não há pautas para esta reunião.
+        i.fa.fa-exclamation-circle
+        | &nbsp;&nbsp; Não há pautas para esta reunião.
         
   .col-sm-12
     = f.fields_for :discussions do |discussion|
