--- a/app/views/records/update.js.erb
+++ b/app/views/records/update.js.erb
@@ -1,3 +1,4 @@
-alert('Tudo foi salvo!');
 $('#updated_at').html('<%= j render 'updated_at' %>');
 $('#discussions').html('<%= j render 'discussions' %>');
+$('#form_basic_info').hide();
+alert('Tudo foi salvo!');
