--- a/app/views/records/_form_basic_info.html.slim
+++ b/app/views/records/_form_basic_info.html.slim
@@ -1,4 +1,4 @@
-.panel.panel-default
+.panel#form_basic_panel.panel-default
 
   .panel-body
 
@@ -7,14 +7,25 @@
       .form-group
         = f.label 'Data e Horário'
         #datetimepicker.input-group.date
-          = f.text_field :date, class:'form-control'
+          = f.text_field :date, class:'form-control', required: true
           span.input-group-addon
             span.glyphicon.glyphicon-calendar
-
-      = f.hidden_field :sector_id, value: @record.sector_id
-      = f.hidden_field :number, value: 0
       
-      = f.submit 'Criar', class:'btn btn-success'
+      .form-group
+        = f.label 'Reunião de nº'
+        = f.number_field :number, class:'form-control', required: true
+      
+      = f.hidden_field :sector_id, value: @record.sector_id
+
+      .btn-group
+
+        = button_tag type: "submit", class: "btn btn-primary" do
+          i.fa.fa-check
+          | &nbsp;&nbsp;Pronto
+
+        button.btn.btn-default[type="button" data-target="#form_basic_panel" data-dismiss="alert"]
+          i.fa.fa-times
+          | &nbsp; Cancelar
 
 javascript:
   $(document).ready(function() {
