--- a/app/views/records/_sector_records.html.slim
+++ b/app/views/records/_sector_records.html.slim
@@ -4,7 +4,8 @@
     
     .col-sm-10
       #no_records.alert.alert-danger
-        | Não há atas para o núcleo selecionado.
+        i.fa.fa-exclamation-circle
+        | &nbsp;&nbsp; Não há atas para o núcleo selecionado.
 
   - else
     
@@ -12,7 +13,11 @@
       .alert.alert-info
         | Há 
         = @sector.records.count
-        |  atas para o núcleo selecionado.
+        - if @sector.records.count == 1
+          |  ata 
+        - else
+          |  atas 
+        | para o núcleo selecionado.
 
   = form_tag('/records/new', remote: true) do
     
@@ -52,9 +57,10 @@
                 - else
                   span.label.label-success
                     | Completa
+                    
               td = record.number
               td = record.date
-              td = link_to 'Editar', edit_record_path(record)
+              td = link_to 'Editar', edit_record_path(record), remote: true
               td = link_to 'Excluir', record,
                                       method: :delete, 
                                       data: { confirm: 'Tem certeza?' },
