--- a/app/views/records/_sector_records.html.slim
+++ b/app/views/records/_sector_records.html.slim
@@ -23,7 +23,7 @@
     
     = hidden_field_tag :sector_id, @sector.id
 
-    .col-sm-2
+    .col-sm-2 style="padding-bottom: 10px"
       = submit_tag 'Criar Nova Ata', class:'btn btn-lg btn-success btn-block'
 
   .col-sm-12
@@ -33,7 +33,7 @@
 
     .col-sm-12
 
-      table.table
+      table.table.table-responsive
 
         thead
           tr
