--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,4 +27,11 @@ body {
 
 h1, h2, h3, h4 {
   font-family: 'Lobster Two';
+  color: #515151;
+}
+
+.logo {
+  height: 70px;
+  width: auto;
+  padding: 5px;
 }
