--- a/app/views/records/index.html.slim
+++ b/app/views/records/index.html.slim
@@ -1,5 +1,12 @@
-h2
-  | Atas
+.row style="padding-top: 10px"
+
+  .col-sm-2.col-xs-12
+    = image_tag 'cjr.png', class: 'logo'
+
+  .col-sm-10.col-xs-12
+  
+    h1.text-right
+      | Atas da CJR
 
 hr.divider
 
