--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,9 +7,52 @@ html
       | SGA
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
     link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css"
+    link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/t/bs/dt-1.10.11,r-2.0.2/datatables.min.css"
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
+    script type="text/javascript" src="https://cdn.datatables.net/t/bs/dt-1.10.11,r-2.0.2/datatables.min.js"
     = csrf_meta_tags
     meta name="viewport" content="width=device-width, initial-scale=1"
 
-  body.container
-    = yield
+  body
+    
+    nav.navbar.navbar-default.navbar-fixed-top
+
+      .container
+
+        .navbar-header
+
+          button.navbar-toggle.collapsed[type="button" data-toggle="collapse" data-target="#menu" aria-expanded="false"]
+            span.sr-only
+              | Toggle
+            span.icon-bar
+            span.icon-bar
+            span.icon-bar
+
+          a.navbar-brand[href="/", title="Sistema de Gerenciamento de Atas"]
+            | SGA
+
+        #menu.collapse.navbar-collapse
+
+          ul.nav.navbar-nav
+
+            li.active
+              a[href="/records"]
+                | Atas
+                span.sr-only
+                  | (Atual)
+            li
+              a[href="#"]
+                | Usuários
+
+          ul.nav.navbar-nav.navbar-right
+
+            li.pull-right
+              a[href="#"]
+                | Sair
+
+            li
+              a[href="#"]
+                | Editar Perfil
+  
+    .container
+      = yield
