--- a/app/views/records/update.js.erb
+++ b/app/views/records/update.js.erb
@@ -1,4 +1,4 @@
 $('#updated_at').html('<%= j render 'updated_at' %>');
 $('#discussions').html('<%= j render 'discussions' %>');
-$('#form_basic_info').hide();
+$('#form_basic_info').fadeOut();
 alert('Tudo foi salvo!');
