--- a/app/views/records/_discussions.html.slim
+++ b/app/views/records/_discussions.html.slim
@@ -1,11 +1,11 @@
 = form_for @record, html: { id: 'discussions_form' }, remote: true do |f|
-
-  .col-sm-12
+    
+  .col-sm-12.col-xs-12
     - if @record.discussions.blank?
       .alert.alert-danger
         i.fa.fa-exclamation-circle
         | &nbsp;&nbsp; Não há pautas para esta reunião.
-        
+      
   .col-sm-12
     = f.fields_for :discussions do |discussion|
       = render 'discussion_fields', f: discussion
