--- a/app/views/records/edit_discussions.html.slim
+++ b/app/views/records/edit_discussions.html.slim
@@ -2,22 +2,15 @@
 
 .row
 
-  .col-sm-10.col-xs-12
+  .col-sm-9.col-xs-12
     .alert.alert-info
       #updated_at
         = render 'updated_at'
 
-  .col-sm-2.col-xs-12 style="padding-bottom: 20px"
-
-    .visible-xs
-      = button_tag type: "submit", class: "btn btn-primary btn-block", form: 'discussions_form' do
-        i.fa.fa-check
-        | &nbsp;&nbsp;Atualizar  
-
-    .hidden-xs
-      = button_tag type: "submit", class: "btn btn-primary btn-block btn-lg", form: 'discussions_form' do
-        i.fa.fa-check
-        | &nbsp;&nbsp;Atualizar
+  .col-sm-3.col-xs-12 style="padding-bottom: 20px"
+    = button_tag type: 'submit', class: 'btn btn-primary btn-block', style: 'margin-top: 3px', form: 'discussions_form' do
+      i.fa.fa-check
+      | &nbsp;&nbsp;&nbsp;Atualizar  
 
   #discussions 
     = render 'discussions'
