--- a/app/views/records/edit_users.html.slim
+++ b/app/views/records/edit_users.html.slim
@@ -2,22 +2,16 @@
 
 .row
 
-  .col-sm-10.col-xs-12
+  .col-sm-9.col-xs-12
     .alert.alert-info
       #updated_at
         = render 'updated_at'
 
-  .col-sm-2.col-xs-12 style="padding-bottom: 20px"
+  .col-sm-3.col-xs-12 style="padding-bottom: 20px"
 
-    .visible-xs
-      = button_tag type: "submit", class: "btn btn-primary btn-block", form: 'users_form' do
-        i.fa.fa-check
-        | &nbsp;&nbsp;Atualizar      
-
-    .hidden-xs
-      = button_tag type: "submit", class: "btn btn-primary btn-block btn-lg", form: 'users_form' do
-        i.fa.fa-check
-        | &nbsp;&nbsp;Atualizar
+    = button_tag type: 'submit', class: 'btn btn-primary btn-block', style: 'margin-top: 3px', form: 'users_form' do
+      i.fa.fa-check
+      | &nbsp;&nbsp;&nbsp;Atualizar
 
   #users
     = render 'users'
