--- a/app/views/records/index.html.slim
+++ b/app/views/records/index.html.slim
@@ -13,11 +13,11 @@
   
     .visible-xs
       h1.text-center
-        | Atas da CJR
+        | Sistema de Gerenciamento de Atas
 
     .hidden-xs
       h1.text-right
-        | Atas da CJR
+        | Sistema de Gerenciamento de Atas
 
 hr.divider
 
@@ -34,7 +34,7 @@ hr.divider
     .col-sm-3.col-xs-5
       = button_tag type: "submit", class: "btn btn-primary btn-block" do
         i.fa.fa-search
-        | &nbsp;&nbsp;Buscar atas 
+        | &nbsp;&nbsp;&nbsp;Buscar atas 
 
 #sector_records style="padding-top: 20px"
   - unless session[:sector_id].nil?
