--- a/app/views/records/show.html.slim
+++ b/app/views/records/show.html.slim
@@ -2,21 +2,24 @@
 
 .row
 
-  .col-sm-12
+  .col-sm-10
 
     .visible-xs
       .text-center
         strong
           | Data e hora da reunião: 
-        = @record.date
+        = traduz_data_e_hora(@record.date.to_time)
 
     .hidden-xs
       strong
         | Data e hora da reunião: 
-      = @record.date
+      = traduz_data_e_hora(@record.date.to_time)
 
     .text-success
       = render 'updated_at'
+
+  .col-sm-2
+    = link_to 'Baixar como PDF', download_path(@record), class: 'btn btn-success pull-right'
 
 hr.divider
 
