Atualiza criação e edição de atas

--- a/app/views/records/_record_user_fields.html.slim
+++ b/app/views/records/_record_user_fields.html.slim
@@ -1,16 +1,31 @@
 .nested-fields
   
-  .col-sm-10
-    .form-group
-      = f.label 'Nome do Membro'
-      = f.select :user_id, User.all.map { |u| [u.name, u.id] },
-                           { include_blank: 'Selecione o membro' },
-                           { class: 'form-control' }
-  .col-sm-2
-    div style="margin-top: 25px"
-      = link_to_remove_association f, class: 'btn btn-warning btn-block' do
-        | Excluir Membro
-        | &nbsp;&nbsp;
-        i.fa.fa-times
+  .row
+    
+    .col-sm-6.col-xs-12
+      .form-group
+        = f.label 'Nome do Membro'
+        = f.select :user_id, User.all.map { |u| [u.name, u.id] },
+                             { include_blank: 'Selecione o membro' },
+                             { class: 'form-control' }
+    .col-sm-4.col-xs-12
+      .form-group
+        = f.label 'Status'
+        = f.select :status_id, Status.all.map { |s| [s.name, s.id] },
+                               { }, { class:'form-control' }
 
-hr.divider
+    .col-sm-2.col-xs-12
+      .hidden-xs
+        div style="margin-top: 25px"
+          = link_to_remove_association f, class: 'btn btn-warning btn-block' do
+            | Excluir Membro
+            | &nbsp;&nbsp;
+            i.fa.fa-times
+            
+      .visible-xs
+        = link_to_remove_association f, class: 'btn btn-warning' do
+          | Excluir Membro
+          | &nbsp;&nbsp;
+          i.fa.fa-times
+
+  hr.divider
