--- a/app/assets/stylesheets/base/_bases.scss
+++ b/app/assets/stylesheets/base/_bases.scss
@@ -1,8 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Lobster+Two');
+@import url('https://fonts.googleapis.com/css?family=Lato');
 
 body {
   padding-top: 80px;
   padding-bottom: 80px;
+  font-family: 'Lato';
 }
 
 h1, h2, h3, h4 {
