Atualização nas views e métodos helpers

--- a/app/views/records/_records_user_fields.html.slim
+++ b/app/views/records/_records_user_fields.html.slim
@@ -1,4 +1,4 @@
-.nested-fields
+.nested-fields style="margin: 15px 0px 15px 0px"
   
   .row
     
@@ -8,24 +8,15 @@
         = f.select :user_id, User.all.map { |u| [u.name, u.id] },
                              { include_blank: 'Selecione o membro' },
                              { class: 'form-control' }
-    .col-sm-4.col-xs-12
+    .col-sm-4.col-xs-6
       .form-group
         = f.label 'Status'
         = f.select :status_id, Status.all.map { |s| [s.name, s.id] },
                                { }, { class:'form-control' }
 
-    .col-sm-2.col-xs-12
-      .hidden-xs
-        div style="margin-top: 25px"
-          = link_to_remove_association f, class: 'btn btn-warning btn-block' do
-            | Excluir Membro
-            | &nbsp;&nbsp;
-            i.fa.fa-times
-            
-      .visible-xs
-        = link_to_remove_association f, class: 'btn btn-warning' do
+    .col-sm-2.col-xs-6
+      div style="margin-top: 25px"
+        = link_to_remove_association f, class: 'btn btn-warning btn-block' do
           | Excluir Membro
           | &nbsp;&nbsp;
           i.fa.fa-times
-
-  hr.divider
